Fixed recycle bin dropdown being cut off in chrome
Fixes #2442

--- a/resources/sass/_tables.scss
+++ b/resources/sass/_tables.scss
@@ -28,6 +28,7 @@ table.table {
     padding: $-s $-s;
     vertical-align: middle;
     margin: 0;
+    overflow: visible;
   }
   th {
     font-weight: bold;
